{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 35,
  "lineage": "d386ee91-e07a-71bf-2e64-54c20ee8ee7a",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:internet-gateway/igw-015f0d56a414f00bc",
            "id": "igw-015f0d56a414f00bc",
            "owner_id": "253942872677",
            "tags": {
              "Name": "network-igw-new"
            },
            "tags_all": {
              "Name": "network-igw-new"
            },
            "vpc_id": "vpc-07fb7285068263ec1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:vpc/vpc-07fb7285068263ec1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03556ea7210d32192",
            "default_route_table_id": "rtb-01105b78e8473c62f",
            "default_security_group_id": "sg-0916d6fefb1b51f1c",
            "dhcp_options_id": "dopt-056ccb048ef9d87f8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07fb7285068263ec1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01105b78e8473c62f",
            "owner_id": "253942872677",
            "tags": {
              "Name": "network-vpc"
            },
            "tags_all": {
              "Name": "network-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.PrivateSubnets[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d62e1092afdef29e",
            "route_table_id": "rtb-04750498f11296662",
            "subnet_id": "subnet-0a7a61e42413ef0d8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PrivateSubnets.aws_subnet.subnet",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.privateRouteTable.aws_route_table.route_table",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad1d3f3493c334d6",
            "route_table_id": "rtb-04750498f11296662",
            "subnet_id": "subnet-079c66f53dca26ed9"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PrivateSubnets.aws_subnet.subnet",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.privateRouteTable.aws_route_table.route_table",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7550b5a9a7d90fc",
            "route_table_id": "rtb-04750498f11296662",
            "subnet_id": "subnet-092ffb59a896d8bfb"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PrivateSubnets.aws_subnet.subnet",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.privateRouteTable.aws_route_table.route_table",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0159d90da7d78fe63",
            "route_table_id": "rtb-04750498f11296662",
            "subnet_id": "subnet-0c706120a6b03adc0"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PrivateSubnets.aws_subnet.subnet",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.privateRouteTable.aws_route_table.route_table",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098d4b08804ff491a",
            "route_table_id": "rtb-04750498f11296662",
            "subnet_id": "subnet-0e4161543103d512d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PrivateSubnets.aws_subnet.subnet",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.privateRouteTable.aws_route_table.route_table",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00238ac1a0284d6e9",
            "route_table_id": "rtb-04750498f11296662",
            "subnet_id": "subnet-0b4f56ae496b60217"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PrivateSubnets.aws_subnet.subnet",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.privateRouteTable.aws_route_table.route_table",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bcc8fc32ea12cf0",
            "route_table_id": "rtb-04750498f11296662",
            "subnet_id": "subnet-0c0e318ec0c2243ba"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PrivateSubnets.aws_subnet.subnet",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.privateRouteTable.aws_route_table.route_table",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0571a37f10853b44f",
            "route_table_id": "rtb-04750498f11296662",
            "subnet_id": "subnet-0955982ef56123ce5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PrivateSubnets.aws_subnet.subnet",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.privateRouteTable.aws_route_table.route_table",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab862a5af92dd8f6",
            "route_table_id": "rtb-04750498f11296662",
            "subnet_id": "subnet-0f64598d435f187df"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PrivateSubnets.aws_subnet.subnet",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.privateRouteTable.aws_route_table.route_table",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.PrivateSubnets[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:subnet/subnet-0a7a61e42413ef0d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7a61e42413ef0d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253942872677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "network-private-subnet-new-1"
            },
            "tags_all": {
              "Name": "network-private-subnet-new-1"
            },
            "vpc_id": "vpc-07fb7285068263ec1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:subnet/subnet-079c66f53dca26ed9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079c66f53dca26ed9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253942872677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "network-private-subnet-new-2"
            },
            "tags_all": {
              "Name": "network-private-subnet-new-2"
            },
            "vpc_id": "vpc-07fb7285068263ec1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:subnet/subnet-092ffb59a896d8bfb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092ffb59a896d8bfb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253942872677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "network-private-subnet-new-3"
            },
            "tags_all": {
              "Name": "network-private-subnet-new-3"
            },
            "vpc_id": "vpc-07fb7285068263ec1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:subnet/subnet-0c706120a6b03adc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c706120a6b03adc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253942872677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "network-private-subnet-new-4"
            },
            "tags_all": {
              "Name": "network-private-subnet-new-4"
            },
            "vpc_id": "vpc-07fb7285068263ec1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:subnet/subnet-0e4161543103d512d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4161543103d512d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253942872677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "network-private-subnet-new-5"
            },
            "tags_all": {
              "Name": "network-private-subnet-new-5"
            },
            "vpc_id": "vpc-07fb7285068263ec1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:subnet/subnet-0b4f56ae496b60217",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4f56ae496b60217",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253942872677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "network-private-subnet-new-6"
            },
            "tags_all": {
              "Name": "network-private-subnet-new-6"
            },
            "vpc_id": "vpc-07fb7285068263ec1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:subnet/subnet-0c0e318ec0c2243ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0e318ec0c2243ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253942872677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "network-private-subnet-new-7"
            },
            "tags_all": {
              "Name": "network-private-subnet-new-7"
            },
            "vpc_id": "vpc-07fb7285068263ec1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:subnet/subnet-0955982ef56123ce5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0955982ef56123ce5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253942872677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "network-private-subnet-new-8"
            },
            "tags_all": {
              "Name": "network-private-subnet-new-8"
            },
            "vpc_id": "vpc-07fb7285068263ec1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:subnet/subnet-0f64598d435f187df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f64598d435f187df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253942872677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "network-private-subnet-new-9"
            },
            "tags_all": {
              "Name": "network-private-subnet-new-9"
            },
            "vpc_id": "vpc-07fb7285068263ec1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.PublicSubnets[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e49ab09b31da9e94",
            "route_table_id": "rtb-0f0287ee468a0664c",
            "subnet_id": "subnet-09be169ce36edc619"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0169fa142b3a62420",
            "route_table_id": "rtb-0f0287ee468a0664c",
            "subnet_id": "subnet-09fe49671b83a8d8c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0551de0ea832fc2ae",
            "route_table_id": "rtb-0f0287ee468a0664c",
            "subnet_id": "subnet-06652d26830d24482"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.PublicSubnets[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:subnet/subnet-09be169ce36edc619",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09be169ce36edc619",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253942872677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "network-public-subnet-new-1"
            },
            "tags_all": {
              "Name": "network-public-subnet-new-1"
            },
            "vpc_id": "vpc-07fb7285068263ec1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:subnet/subnet-09fe49671b83a8d8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09fe49671b83a8d8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253942872677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "network-public-subnet-new-2"
            },
            "tags_all": {
              "Name": "network-public-subnet-new-2"
            },
            "vpc_id": "vpc-07fb7285068263ec1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:subnet/subnet-06652d26830d24482",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06652d26830d24482",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253942872677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "network-public-subnet-new-3"
            },
            "tags_all": {
              "Name": "network-public-subnet-new-3"
            },
            "vpc_id": "vpc-07fb7285068263ec1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.nat-gateway[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0185fda064a53eb4e",
            "domain": "vpc",
            "id": "eipalloc-0185fda064a53eb4e",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-21-142-241.us-east-2.compute.amazonaws.com",
            "public_ip": "3.21.142.241",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.nat-gateway[0]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0185fda064a53eb4e",
            "connectivity_type": "public",
            "id": "nat-0c8f968720ef4e328",
            "network_interface_id": "eni-00104dd2073ed7742",
            "private_ip": "10.0.2.131",
            "public_ip": "3.21.142.241",
            "subnet_id": "subnet-09fe49671b83a8d8c",
            "tags": {
              "Name": "network-nat-new"
            },
            "tags_all": {
              "Name": "network-nat-new"
            }
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.privateRouteTable[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:route-table/rtb-04750498f11296662",
            "id": "rtb-04750498f11296662",
            "owner_id": "253942872677",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c8f968720ef4e328",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "network-private-rt-new-rt"
            },
            "tags_all": {
              "Name": "network-private-rt-new-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fb7285068263ec1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.publicRouteTable[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:route-table/rtb-0f0287ee468a0664c",
            "id": "rtb-0f0287ee468a0664c",
            "owner_id": "253942872677",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-015f0d56a414f00bc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "network-public-rt-new-rt"
            },
            "tags_all": {
              "Name": "network-public-rt-new-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fb7285068263ec1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.public_web_security_group[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:security-group/sg-0a114396080bc58b8",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a114396080bc58b8",
            "ingress": [],
            "name": "network-sg-name-new",
            "name_prefix": "",
            "owner_id": "253942872677",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "network-sg-name-new",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Name": "network-sg-name-new",
              "Provisioner": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fb7285068263ec1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.public_web_security_group[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_egress_with_cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-3037687940",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a114396080bc58b8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.module.public_web_security_group.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.public_web_security_group[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Rule for port 80",
            "from_port": 80,
            "id": "sgrule-3920308865",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a114396080bc58b8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.module.public_web_security_group.aws_security_group.security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Rule for port 443",
            "from_port": 443,
            "id": "sgrule-1593895813",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a114396080bc58b8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.module.public_web_security_group.aws_security_group.security_group"
          ]
        }
      ]
    }
  ]
}